<resources>
    <string name="app_name">My notez</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_new_note">add new note</string>
    <string name="update_note">update note</string>
    <string name="title">Title</string>
    <string name="type_your_note">Type Your Note Here..</string>
    <string name="enter_the_label_title_here">Enter the label title here</string>
    <string name="pinned">Pinned</string>
    <string name="archived">Archived</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="share_message">\"%s\"\n\n%s</string>
    <string name="to_convert_speech_to_text">to convert speech to text</string>
    <string name="navigation_header">navigation header</string>
    <string name="labels_tag">Labels:</string>
    <string name="no_notes_here_yet">No Notes Here Yet</string>
    <string name="labels">Labels:</string>
    <string name="item_icon">item icon</string>
    <string name="add_label">Add Label</string>
    <string name="speech_to_text">Speech To Text</string>
    <string name="delete_note">Delete Note</string>
    <string name="make_a_copy">Make a Copy</string>
    <string name="share_note">Share Note</string>

</resources>